--- a/src/components/user/landing/styled/styles.css
+++ b/src/components/user/landing/styled/styles.css
@@ -1,9 +1,9 @@
 iframe {
   margin-top: -135px;
 }
-.hLpijc {
+.hHnlyI {
   overflow: hidden;
 }
-.sc-csDkEv {
+.sc-jmfXTE {
   overflow: hidden;
 }
